2008-04-08  Johan Dahlin  <jdahlin@async.com.br>

	* gio/Makefile.am:
	* gio/gfileinfo.override:
	* gio/gio.defs:
	* gio/gio.override:
	* tests/test_gio.py:
	Wrap GFileInfo.list_attributes(), add tests and
	set the default of GFileQueryInfoFlags args to G_FILE_QUERY_INFO_NONE.

2008-04-08  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/option.py: Fix a typo
	* tests/test_option.py:
	Update the tests after the latest "refactoring".
	The testsuite should run fine now again, finally.

2008-04-08  Johan Dahlin  <johan@gnome.org>

	* tests/test_gio.py (TestOutputStream.testWriteAsyncError): 
	(TestInputStream._testCloseAsync.callback): 
	Disable these tests until we can figure why they freeze during 
	make check.

2008-04-08  Johan Dahlin  <jdahlin@async.com.br>

	* gio/gio.defs:
	* gio/gio.override:
	* tests/test_gio.py:
	Add bindings for content_type_guess.
	Based on patch by Thomas Leonard (#525113)

2008-04-08  Johan Dahlin  <jdahlin@async.com.br>

	* gio/gio-types.defs:
	* gio/gio.defs:
	* gio/gio.override:
	* tests/test_gio.py:
	Add basic support for GThemedIcon, based on patch by
	Thomas Leonard (#521883)

2008-04-08  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygsource.c:
	* tests/test_source.py:
	Unbreak Source.prepare (#523075, Bryan Silverthorn)

2008-04-08  Johan Dahlin  <johan@gnome.org>

	* gio/gfile.override (_wrap__install_file_meta): Fix a couple of
	silly typos and use gio.File instead of GFile in exceptions.

2008-04-07  Johan Dahlin  <johan@gnome.org>

	* gio/__init__.py:
	* gio/gfile.override:
	* gio/gio-types.defs:
	* gio/gio.override:
	* tests/test_gio.py:
	Make gio.File() (calling on an interface) a factory for creating
	files. Add tests and a docstring.

2008-04-07  Johan Dahlin  <johan@gnome.org>

	* gio/Makefile.am (pygiodir): Install gio in the right location

2008-04-06  Johan Dahlin  <johan@gnome.org>

	* tests/test_gio.py: Add tests for recently added features.

	* gio/goutputstream.override: 